--- a/loginview.ui
+++ b/loginview.ui
@@ -32,7 +32,7 @@
      <item>
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>欢迎使用医疗诊断测试系统</string>
+        <string>欢迎使用医疗诊断系统</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignmentFlag::AlignCenter</set>
