--- a/patientview.ui
+++ b/patientview.ui
@@ -28,20 +28,12 @@
        <property name="text">
         <string>查找</string>
        </property>
-       <property name="icon">
-        <iconset resource="rsc.qrc">
-         <normaloff>:/img/search.svg</normaloff>:/img/search.svg</iconset>
-       </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="btAdd">
        <property name="text">
         <string>添加</string>
-       </property>
-       <property name="icon">
-        <iconset resource="rsc.qrc">
-         <normaloff>:/img/add.svg</normaloff>:/img/add.svg</iconset>
        </property>
       </widget>
      </item>
@@ -50,20 +42,12 @@
        <property name="text">
         <string>删除</string>
        </property>
-       <property name="icon">
-        <iconset resource="rsc.qrc">
-         <normaloff>:/img/delete.svg</normaloff>:/img/delete.svg</iconset>
-       </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="btEdit">
        <property name="text">
         <string>修改</string>
-       </property>
-       <property name="icon">
-        <iconset resource="rsc.qrc">
-         <normaloff>:/img/modify.svg</normaloff>:/img/modify.svg</iconset>
        </property>
       </widget>
      </item>
@@ -74,8 +58,6 @@
    </item>
   </layout>
  </widget>
- <resources>
-  <include location="rsc.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
